# baseline-tajalli

./: .gitignore  README.md  pyproject.toml
configs/tajalli/: phase1_adaptive.yaml  phase1_adaptive_compat.yaml  phase1_wt103_300k.yaml
scripts/: __init__.py  _baseline_config.py  _baseline_imports.py  build_wt103_freq.py  check_freq_file.py  smoke_train_step.py  train_phase1.py  verify_phase1_adaptive.py
src/tajalli/: __init__.py  interfaces.py  nncore_attention.py  nncore_bridge.py  nncore_mlp.py
src/tajalli/evaluation/: __init__.py  perplexity.py  stability.py
src/tajalli/model/: __init__.py  adaptive_output.py  attention.py  ayan_moe.py  barzakh.py  diverse_moe.py  essence.py  exit_router.py  init.py  jamba_adapter.py  lawh.py  moe.py  qadr.py  tajalli.py  tajalli_block_v2.py  tajalli_model.py
src/tajalli/training/: __init__.py  config_utils.py  losses.py  scheduler.py  trainer.py
tests/: test_ablation_modes.py  test_attention.py  test_attention_adapter_api.py  test_exit_router.py  test_gate_entropy.py  test_imports.py  test_mlp_norm.py  test_model_forward.py  test_model_public_api.py  test_phase1_hardening.py  test_recursive_kv.py  test_rope_placement.py  test_scheduler.py  test_train_step_smoke.py  test_variable_depth.py
