[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tajalli"
version = "0.1.0"
description = "Tajalli research repo (migrating transformer components to nn-core)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
